--- a/app/index.html
+++ b/app/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>WAWE</title>
+  <title>WAWE ~ Surfing School</title>
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -13,23 +12,73 @@
   <!-- === HEADER === -->
   <header class="header">
     <div class="container">
-      
+      <div class="header__inner">
+        <a class="header__logo" href="#">
+          <img class="header__image" src="images/logo.svg" alt="логотип">
+        </a>
+        <nav class="menu">
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a class="menu__link" href="#">
+                О нас
+              </a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#">
+                Услуги
+              </a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#">
+                Стоимость
+              </a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#">
+                Блог
+              </a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#">
+                Команда
+              </a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#">
+                Контакты
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </div>
   </header>
   <!-- === / HEADER === -->
 
-  <!-- === FOOTER === -->
-  <footer id="footer" class="footer">
-    <div class="container">
-      
-    </div>
-  </footer>
-  <!-- === / FOOTER === -->
+  <main class="main">
+    <!-- === HERO === -->
+    <section class="hero" class="hero__inner" style="background-image: url(images/hero-background.jpg);">
+      <div class="container">
+        <h1 class="hero__title">
+          WAWE
+        </h1>
+        <h4 class="hero__subtitle">
+          Школа серфинга на канарских Островах
+        </h4>
+        <a class="hero__scroll" href="#">
+          <img class="hero__scroll-image" src="images/icons/surf-board-scroll.svg" alt="иконка доска для сёрфинга">
+        </a>
+      </div>
+    </section>
+    <!-- === / HERO === -->
+  </main>
+
+  <footer class="footer"></footer>
+  </div>
 
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <!-- <script src="js/libs.min.js"></script> -->
-  <script src="js/main.js"></script>
+
+  <script src="js/main.min.js"></script>
 </body>
 
 </html>
