almost-made about-school

--- a/app/index.html
+++ b/app/index.html
@@ -129,7 +129,103 @@
 
     <!-- === ABOUT-SCHOOL === -->
     <section class="about-school">
-      
+      <div class="container">
+        <h2 class="about-school__title  title">
+          В ШКОЛЕ ВЫ ПОЛУЧИТЕ
+        </h2>
+        <div class="about-school__info-wrapper">
+          <div class="about-school__info-item">
+            <div class="about-school__item-box">
+              <img class="about-school__info-image" src="images/icons/sun-n-waves.svg" alt="иконка солнце с волнами">
+              <h3 class="about-school__info-title">
+                ПРОЖИВАНИЕ
+              </h3>
+            </div>
+            <p class="about-school__info-text">
+              Наша школа сёрфинга находится в 100 м от океанского побережья. К услугам гостей открытый бассейн и бесплатный Wi-Fi. Из верхней террасы открывается вид на океан. Расстояние до центра города 15 мин.
+            </p>
+          </div>
+          <div class="about-school__info-item">
+            <div class="about-school__item-box">
+              <img class="about-school__info-image" src="images/icons/airplane.svg" alt="иконка самолёт">
+              <h3 class="about-school__info-title">
+                ПЕРЕЛЁТ И
+                СТРАХОВКУ
+              </h3>
+            </div>
+            <p class="about-school__info-text">
+              Все участники программы застрахованы страховой компанией Allianz.
+              Перелёт из Тенерифе до острова Лансароте и обратно входит в стоимость программы
+            </p>
+          </div>
+          <div class="about-school__info-item">
+            <div class="about-school__item-box">
+              <img class="about-school__info-image" src="images/icons/surfer.svg" alt="иконка сёрфер">
+              <h3 class="about-school__info-title">
+                ОБУЧЕНИЕ И
+                ЭКИПИРОВКУ
+              </h3>
+            </div>
+            <p class="about-school__info-text">
+              Все оборудование и экипировка известных производителей и предоставляется на весь курс программы.
+              Тренировочный процесс
+              начинается с определения вашего уровня катания
+            </p>
+          </div>
+        </div>
+
+        <div class="about-school__stats-wrapper">
+          <div class="about-school__stats-infolines">
+            <div class="about-school__infolines-item">
+              <div class="about-school__infoline-box">
+                <img class="about-school__infoline-image" style="width: calc(100% - 15%);"
+                  src="images/icons/info-line-wave.svg" alt="картинка волны-графика">
+                <span class="about-school__infoline-number">
+                  85%
+                </span>
+              </div>
+              <p class="about-school__infoline-subtitle">
+                Приехали второй раз
+              </p>
+            </div>
+            <div class="about-school__infolines-item">
+              <div class="about-school__infoline-box">
+                <img class="about-school__infoline-image" style="width: 95%;" src="images/icons/info-line-wave.svg"
+                  alt="картинка волны-графика">
+                <span class="about-school__infoline-number">
+                  95%
+                </span>
+              </div>
+              <p class="about-school__infoline-subtitle">
+                Научились кататься
+              </p>
+            </div>
+            <div class="about-school__infolines-item">
+              <div class="about-school__infoline-box">
+                <img class="about-school__infoline-image" style="width: 99%;" src="images/icons/info-line-wave.svg"
+                  alt="картинка волны-графика">
+                <span class="about-school__infoline-number">
+                  99%
+                </span>
+              </div>
+              <p class="about-school__infoline-subtitle">
+                Довольных клиентов
+              </p>
+            </div>
+          </div>
+          <div class="about-school__stats-text">
+            <p class="about-school__stats-paragraph">
+              Огромным преимуществом нашей школы является собственная методика обучения. Мы разработали собственный
+              стиль обучения серфингу, который позволяет новичкам максимально быстро встать на доску.
+            </p>
+            <p class="about-school__stats-paragraph">
+              Именно наша методика и наши преподаватели позволили нам пройти аттестацию Федерации серфинга Канарских
+              островов - FEDERACIÓN CANARIA DE SURF. Это означает, что наша школа соответствует всем мировым стандартам.
+              Переаттестация производится ежегодно и это позволяет нам всегда стремиться к улучшению обучения.
+            </p>
+          </div>
+        </div>
+      </div>
     </section>
     <!-- === / ABOUT-SCHOOL === -->
   </main>
