finished about-school

--- a/app/index.html
+++ b/app/index.html
@@ -178,11 +178,13 @@
           <div class="about-school__stats-infolines">
             <div class="about-school__infolines-item">
               <div class="about-school__infoline-box">
-                <img class="about-school__infoline-image" style="width: calc(100% - 15%);"
-                  src="images/icons/info-line-wave.svg" alt="картинка волны-графика">
-                <span class="about-school__infoline-number">
-                  85%
-                </span>
+                <div class="about-school__image-wrapper">
+                  <img class="about-school__infoline-image" style="width: 85%;"
+                    src="images/icons/info-line-wave.svg" alt="картинка волны-графика">
+                    <span class="about-school__infoline-number  about-school__infoline-number--1">
+                      85%
+                    </span>
+                </div>
               </div>
               <p class="about-school__infoline-subtitle">
                 Приехали второй раз
@@ -190,11 +192,13 @@
             </div>
             <div class="about-school__infolines-item">
               <div class="about-school__infoline-box">
-                <img class="about-school__infoline-image" style="width: 95%;" src="images/icons/info-line-wave.svg"
-                  alt="картинка волны-графика">
-                <span class="about-school__infoline-number">
-                  95%
-                </span>
+                <div class="about-school__image-wrapper">
+                  <img class="about-school__infoline-image" style="width: 95%;" src="images/icons/info-line-wave.svg"
+                    alt="картинка волны-графика">
+                    <span class="about-school__infoline-number  about-school__infoline-number--2">
+                      95%
+                    </span>
+                </div>
               </div>
               <p class="about-school__infoline-subtitle">
                 Научились кататься
@@ -202,11 +206,13 @@
             </div>
             <div class="about-school__infolines-item">
               <div class="about-school__infoline-box">
-                <img class="about-school__infoline-image" style="width: 99%;" src="images/icons/info-line-wave.svg"
-                  alt="картинка волны-графика">
-                <span class="about-school__infoline-number">
-                  99%
-                </span>
+                <div class="about-school__image-wrapper">
+                  <img class="about-school__infoline-image" style="width: 99%;" src="images/icons/info-line-wave.svg"
+                    alt="картинка волны-графика">
+                    <span class="about-school__infoline-number">
+                      99%
+                    </span>
+                </div>
               </div>
               <p class="about-school__infoline-subtitle">
                 Довольных клиентов
