--- a/app/index.html
+++ b/app/index.html
@@ -234,6 +234,27 @@
       </div>
     </section>
     <!-- === / ABOUT-SCHOOL === -->
+
+    <!-- === ABOUT-TEACHERS === -->
+    <section class="about-teachers">
+        <div class="container">
+          <h2 class="about-teachers__info-title  title">
+            ПОКОРЯЙ ВЕРШИНЫ
+          </h2>
+          <p class="about-teachers__info-text">
+            Преподаватели нашей школы серфинга в числе лучших серферов на Канарских островах. Среди них - чемпион Европы по лонгборду, который с радостью поделится опытом как с новичками, так и более опытными серферами.
+            Все члены преподавательского состава являются сертифицированными членами Федерации серфинга Канарских островов. Некоторые из них знают русский язык, что определенно позиционирует нас как русскую школу серфинга за границей!
+          </p>
+          <p class="about-teachers__info-text">
+            Весь тренерский состав регулярно участвует в семинарах и курсах повышения квалификации, которые проводятся по всему миру различными известными серф-клубами и федерациями. Поэтому в нашей школе серфинга вы можете быть спокойны: вас обучают лучшие тренеры!
+          </p>
+          <p class="about-teachers__info-text">
+            Методика обучения серфингу рассчитана как на новичков, на серферов среднего уровня, так и на серферов уровня ТОП. Тренеры находят подход к каждому, несмотря на то, что обучение серфингу в нашей школе производится в группах. Однако, мы предлагаем персональные уроки серфинга - только вы и тренер!
+          </p>
+        </div>
+      <img class="about-teachers__image" src="images/about-teachers-background.jpg" alt="мужчина сёрфер">
+    </section>
+    <!-- === / ABOUT-TEACHERS === -->
   </main>
 
   <footer class="footer">
