--- a/app/index.html
+++ b/app/index.html
@@ -255,6 +255,11 @@
       <img class="about-teachers__image" src="images/about-teachers-background.jpg" alt="мужчина сёрфер">
     </section>
     <!-- === / ABOUT-TEACHERS === -->
+
+    <!-- === GALLERY === -->
+    <section class="gallery">
+    </section>
+    <!-- === / GALLERY === -->
   </main>
 
   <footer class="footer">
